Linked reset.css file to each page and made adjustments to layouts. Resized profile photo and text to fit content area better. Resized stack overflow icon image and fixed spacing of icons. Corrected padding and margins to match each page. Bolded and increased font sizes on titles. Realigned contact form boxes to fit layout.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,9 @@ a:link, a:visited {
     color: #ffffff;
     padding: 15px;
     width: fit-content;
-    font-size: 20px;
+    font-size: 22px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin-top: 0px;
     margin-left: 150px;
     position: relative;
@@ -72,7 +74,7 @@ img {
     border-width: 0px;
     border-color: #dddddd;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .indent {
@@ -86,16 +88,33 @@ h2 {
     margin-left: 10px;
     margin-bottom: -10px;
     color: #4aaaa5;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-hr {
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#hr1,
+#hr3 {
+    margin-bottom: 25px;
+}
+
+#hr2 {
     margin-bottom: 45px;
 }
 
 h3 {
     text-align: center;
     color: #4aaaa5;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
 }
 
 #sidebar {
@@ -104,7 +123,7 @@ h3 {
     width: 270px;
     height: 170px;
     margin-top: 40px;
-    margin-right: -20px;
+    margin-right: -30px;
 }
 
 footer {
@@ -152,9 +171,9 @@ div.gallery img {
 
 h4 {
     position: absolute;
-    top: 105px;
-    left: 37.5px;
-    width: 32.8%;
+    top: 120px;
+    left: 34.5px;
+    width: 32.9%;
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 10px;
@@ -165,8 +184,8 @@ h4 {
 
 h5 {
     position: absolute;
-    right: 104.1px;
-    top: 100px;
+    right: 109.1px;
+    top: 120px;
     width: 32.9%;
     background-color: #4aaaa5;
     color: #ffffff;
@@ -178,9 +197,9 @@ h5 {
 
 h6 {
     position: absolute;
-    top: 280px;
-    left: 37.5px;
-    width: 32.8%;
+    top: 310px;
+    left: 34.5px;
+    width: 32.9%;
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 10px;
@@ -191,9 +210,9 @@ h6 {
 
 h7 {
     position: absolute;
-    right: 104.5px;
-    top: 317px;
-    width: 32.8%;
+    right: 109.4px;
+    top: 310px;
+    width: 32.9%;
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 10px;
@@ -204,9 +223,9 @@ h7 {
 
 h8 {
     position: absolute;
-    top: 508px;
-    left: 37.5px;
-    width: 32.8%;
+    top: 500px;
+    left: 34.5px;
+    width: 32.9%;
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 10px;
@@ -226,14 +245,15 @@ h8 {
 
 .wrapper2 {
     padding: 10px;
-    margin-left: 100px;
+    margin-left: 140px;
+    
 }
 
 #content3 {
     background-color: #ffffff;
     height: 575px;
-    width: 650px;
-    margin-top: 40px;
+    width: 610px;
+    margin-top: 30px;
     position: fixed;
 }
 
@@ -241,13 +261,32 @@ h1 {
     color: #4aaaa5;
 }
 
+#align {
+    margin-top: 10px;
+    
+}
+
+#gh {
+    margin-left: 50px;
+    margin-right: 8px;
+}
+
+#link {
+    margin-left: 5px;
+}
+
+#resize {
+    padding-top: 3px;
+    margin: 0 auto;
+}
+
 #sidebar3 {
     float: right;
     background-color: #ffffff;
     width: 270px;
     height: 170px;
-    margin-top: 40px;
-    margin-right: -50px;
+    margin-top: 20px;
+    margin-right: -30px;
 }
 
 input[type=text], select {
@@ -269,9 +308,16 @@ input[type=submit] {
     border-radius: 4px;
     cursor: pointer;
 }
+#FullName,
+#Email,
+#Message {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    margin-left: -2px;
+}
 
 #Message {
-    padding: 84px 20px;
+    padding: 125px;
 }
 
 input[type=submit]:hover {
